# hat-trie

./: .nohap.json  CMakeLists.txt  Makefile.in  configure  configure.ac  project.config
src/: CMakeLists.txt  Makefile.in  ahtable.c  ahtable.h  hat-trie.c  hat-trie.h  murmurhash3.c  murmurhash3.h  pstdint.h  superfasthash.c  superfasthash.h
src/msvc/: stdbool.h
test/: Makefile.in
