IF(${MSVC})
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/msvc)
ENDIF(${MSVC})
SET(SOURCES
	ahtable.c
	hat-trie.c
	misc.c
	murmurhash3.c)
SET_SOURCE_FILES_PROPERTIES(${SOURCES} PROPERTIES LANGUAGE CXX)
ADD_LIBRARY(hat-trie ${SOURCES})
INSTALL(
	TARGETS hat-trie
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	PUBLIC_HEADER DESTINATION include/hat-trie
)
