IF(${MSVC})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/msvc)
ENDIF(${MSVC})

SET(HEADERS
  hat-trie.h
  common.h)

SET(SOURCES
  ahtable.c
  hat-trie.c
  misc.c
  murmurhash3.c)

ADD_LIBRARY(hat-trie ${SOURCES})
SET_TARGET_PROPERTIES(hat-trie PROPERTIES PUBLIC_HEADER "${HEADERS}")

INSTALL(
  TARGETS hat-trie
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  PUBLIC_HEADER DESTINATION include/hat-trie
)
